fixed padding issue at the bottom of the game list that was leading to last row being hidden when there's scrollbar

--- a/src/app/pages/home/home.component.sass
+++ b/src/app/pages/home/home.component.sass
@@ -58,7 +58,7 @@
   width: 41.875rem
   overflow-y: auto
   scroll-behavior: smooth
-  margin-bottom: 2rem
+  margin-bottom: 4rem
   table
     font-size: .875rem
     tr
